test/invalid/baseline/no-semicolon-operation.txt
Syntax error at line 3, since `interface Waka`:
  void eve()
  ^ Unterminated operation, expected `;`
